--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "disbots",
   "version": "1.0.2",
-  "description": "A official disbots.xyz api.",
+  "description": "A official disbots.xyz api",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
